fix - restaurant listing page show address form on mobile

--- a/src/Volo/FrontendBundle/Resources/public/css/pages/restaurants.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/pages/restaurants.scss
@@ -19,7 +19,6 @@
 .restaurants__tool-box {
   @include make-row();
   height: 84px;
-  @include appear-from("screen-sm")
 }
 
 .restaurants__location {
